[package]
name = "advent_of_code_2015"
version = "0.1.0"
authors = ["Andrea Princic <princic.1837592@studenti.uniroma1.it>"]
edition = "2021"

[lib]
name = "advent_of_code_2015"
path = "lib.rs"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
md5 = "0.7.0"
regex = "1.7.1"
itertools = "0.10.5"
serde_json = "1.0.91"
rand = "0.8.5"