[package]
name = "advent_of_code_2016"
version = "0.1.0"
authors = ["Andrea Princic <andreapri.99@gmail.com>"]
edition = "2021"

[lib]
name = "advent_of_code_2016"
path = "lib.rs"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
md5 = "0.7.0"
rayon = "1.6.1"
regex = "1.7.1"
itertools = "0.10.5"