[package]
name = "advent_of_code_2024"
version = "0.1.0"
authors = ["Andrea Princic <princic.1837592@studenti.uniroma1.it>"]
edition = "2021"

[lib]
name = "advent_of_code_2024"
path = "lib.rs"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
utils = { path = "../utils" }
regex = "1.11.1"
rayon = "1.10.0"
itertools = "0.13.0"